--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "projetgest",
+  "name": "taskflow",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.1.4"
+    "@clerk/nextjs": "^6.3.4",
+    "@prisma/client": "^5.22.0",
+    "lucide-react": "^0.460.0",
+    "next": "15.0.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-quill-new": "^3.3.3",
+    "react-toastify": "^10.0.6"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "daisyui": "^4.12.14",
+    "eslint": "^8",
+    "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "prisma": "^5.22.0",
     "tailwindcss": "^3.4.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.4",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
